syntax = "proto3";

package auth.v1;

option go_package = "auth/v1;authv1";

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateRequest {
  string token = 1;
}

message AuthResponse {
  string access_token = 1;
}

message ValidateResponse {
  string user_id = 1;
  bool valid = 2;
}

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
}